updating baseline creation to reflect the new scoring metric

--- a/notebooks/01_baseline_model_creation.ipynb
+++ b/notebooks/01_baseline_model_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -451,7 +451,7 @@
        "4          25900                 away                 9             False  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +673,7 @@
        "s:300~l:8337~e:93505~c:93505                  2  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -850,7 +850,7 @@
        "4                 9  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
        "Name: score, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -962,25 +962,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "18.72833374074616"
+       "14.661669659603934"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import mean_absolute_error\n",
     "\n",
-    "random_rmse = np.sqrt(mean_squared_error(df['score'], random_predictions))\n",
-    "random_rmse\n"
+    "random_mae = mean_absolute_error(df['score'], random_predictions)\n",
+    "random_mae\n"
    ]
   },
   {
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,27 +1003,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13.592869181545064"
+       "10.252334088701845"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rule_based_rmse = np.sqrt(\n",
-    "    mean_squared_error(\n",
-    "        rolling_average_df['score'], rolling_average_df['rolling_5_score']\n",
-    "    )\n",
-    ")\n",
-    "rule_based_rmse"
+    "rule_based_mae = mean_absolute_error(rolling_average_df['score'], rolling_average_df['rolling_5_score'])\n",
+    "rule_based_mae"
    ]
   },
   {
@@ -1039,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1050,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1061,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1072,16 +1068,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12.512675365892134"
+       "9.355663118873512"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1092,15 +1088,15 @@
     "lr = LinearRegression()\n",
     "lr.fit(X_train, y_train)\n",
     "y_pred = lr.predict(X_test)\n",
-    "lr_rmse = np.sqrt(mean_squared_error(y_test, y_pred))\n",
-    "lr_rmse\n"
+    "lr_mae = mean_absolute_error(y_test, y_pred)\n",
+    "lr_mae\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So, another small improvement, but still a RMSE of 12.5. This was a very basic feature set, and I can build this out in future iterations."
+    "So, another small improvement, but still a MAE of 9.36. This was a very basic feature set, and I can build this out in future iterations."
    ]
   }
  ],
