--- a/notebooks/01_baseline_model_creation.ipynb
+++ b/notebooks/01_baseline_model_creation.ipynb
@@ -1116,7 +1116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.0 (default, Jun  8 2022, 14:19:37) [Clang 13.0.0 (clang-1300.0.29.3)]"
   },
   "orig_nbformat": 4,
   "vscode": {
