--- a/notebooks/01_baseline_model_creation.ipynb
+++ b/notebooks/01_baseline_model_creation.ipynb
@@ -11,7 +11,7 @@
     "import pandas as pd\n",
     "\n",
     "from rugby_prediction.constants import DATA_FOLDER\n",
-    "from rugby_prediction.preprocessing import (\n",
+    "from rugby_prediction.preprocess import (\n",
     "    transform_raw_data_to_team_level,\n",
     "    create_rolling_average,\n",
     "    drop_nill_draws\n",
@@ -66,7 +66,8 @@
        "      <th>indoor</th>\n",
        "      <th>team_1_id</th>\n",
        "      <th>team_1_name</th>\n",
-       "      <th>...</th>\n",
+       "      <th>team_1_abbreviation</th>\n",
+       "      <th>team_1_home_away</th>\n",
        "      <th>team_1_score</th>\n",
        "      <th>team_1_winner</th>\n",
        "      <th>team_2_id</th>\n",
@@ -92,7 +93,8 @@
        "      <td>False</td>\n",
        "      <td>9</td>\n",
        "      <td>France</td>\n",
-       "      <td>...</td>\n",
+       "      <td>FRA</td>\n",
+       "      <td>home</td>\n",
        "      <td>16</td>\n",
        "      <td>True</td>\n",
        "      <td>2</td>\n",
@@ -116,7 +118,8 @@
        "      <td>False</td>\n",
        "      <td>4</td>\n",
        "      <td>Wales</td>\n",
-       "      <td>...</td>\n",
+       "      <td>WALES</td>\n",
+       "      <td>home</td>\n",
        "      <td>11</td>\n",
        "      <td>True</td>\n",
        "      <td>1</td>\n",
@@ -140,7 +143,8 @@
        "      <td>False</td>\n",
        "      <td>25901</td>\n",
        "      <td>Harlequins</td>\n",
-       "      <td>...</td>\n",
+       "      <td>HQUIN</td>\n",
+       "      <td>home</td>\n",
        "      <td>38</td>\n",
        "      <td>True</td>\n",
        "      <td>25900</td>\n",
@@ -164,7 +168,8 @@
        "      <td>False</td>\n",
        "      <td>25907</td>\n",
        "      <td>Northampton Saints</td>\n",
-       "      <td>...</td>\n",
+       "      <td>NTHMP</td>\n",
+       "      <td>home</td>\n",
        "      <td>20</td>\n",
        "      <td>False</td>\n",
        "      <td>25909</td>\n",
@@ -188,7 +193,8 @@
        "      <td>False</td>\n",
        "      <td>25898</td>\n",
        "      <td>Bath Rugby</td>\n",
-       "      <td>...</td>\n",
+       "      <td>BATH</td>\n",
+       "      <td>home</td>\n",
        "      <td>6</td>\n",
        "      <td>False</td>\n",
        "      <td>25903</td>\n",
@@ -202,44 +208,15 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   match_id                       unique_id         match_date  \\\n",
-       "0     24843    s:300~l:8323~e:24843~c:24843  2005-02-05T14:00Z   \n",
-       "1     24844    s:300~l:8323~e:24844~c:24844  2005-02-05T17:30Z   \n",
-       "2    128030  s:300~l:8007~e:128030~c:128030  2005-02-05T14:00Z   \n",
-       "3    128028  s:300~l:8007~e:128028~c:128028  2005-02-05T15:00Z   \n",
-       "4    128029  s:300~l:8007~e:128029~c:128029  2005-02-05T19:45Z   \n",
-       "\n",
-       "                                 venue         city    state  neutral_site  \\\n",
-       "0                      Stade de France  Saint-Denis  Reunion         False   \n",
-       "1                 Principality Stadium      Cardiff    Wales         False   \n",
-       "2                     Twickenham Stoop       London  England         False   \n",
-       "3  cinch Stadium at Franklin's Gardens  Northampton  England         False   \n",
-       "4                    Recreation Ground         Bath  England         False   \n",
-       "\n",
-       "  indoor  team_1_id         team_1_name  ... team_1_score team_1_winner  \\\n",
-       "0  False          9              France  ...           16          True   \n",
-       "1  False          4               Wales  ...           11          True   \n",
-       "2  False      25901          Harlequins  ...           38          True   \n",
-       "3  False      25907  Northampton Saints  ...           20         False   \n",
-       "4  False      25898          Bath Rugby  ...            6         False   \n",
-       "\n",
-       "   team_2_id       team_2_name  team_2_abbreviation team_2_home_away  \\\n",
-       "0          2          Scotland                 SCOT             away   \n",
-       "1          1           England                  ENG             away   \n",
-       "2      25900  Gloucester Rugby                GLOUC             away   \n",
-       "3      25909          Saracens                SARAC             away   \n",
-       "4      25903  Leicester Tigers                LEICS             away   \n",
-       "\n",
-       "  team_2_score team_2_winner            competition season  \n",
-       "0            9         False            Six Nations   2005  \n",
-       "1            9         False            Six Nations   2005  \n",
-       "2            9         False  Gallagher Premiership   2005  \n",
-       "3           21          True  Gallagher Premiership   2005  \n",
-       "4            6         False  Gallagher Premiership   2005  \n",
+       "   match_id                       unique_id  ...            competition season\n",
+       "0     24843    s:300~l:8323~e:24843~c:24843  ...            Six Nations   2005\n",
+       "1     24844    s:300~l:8323~e:24844~c:24844  ...            Six Nations   2005\n",
+       "2    128030  s:300~l:8007~e:128030~c:128030  ...  Gallagher Premiership   2005\n",
+       "3    128028  s:300~l:8007~e:128028~c:128028  ...  Gallagher Premiership   2005\n",
+       "4    128029  s:300~l:8007~e:128029~c:128029  ...  Gallagher Premiership   2005\n",
        "\n",
        "[5 rows x 22 columns]"
       ]
@@ -422,33 +399,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   match_id                       unique_id         match_date  \\\n",
-       "0     24843    s:300~l:8323~e:24843~c:24843  2005-02-05T14:00Z   \n",
-       "1     24843    s:300~l:8323~e:24843~c:24843  2005-02-05T14:00Z   \n",
-       "2     24844    s:300~l:8323~e:24844~c:24844  2005-02-05T17:30Z   \n",
-       "3     24844    s:300~l:8323~e:24844~c:24844  2005-02-05T17:30Z   \n",
-       "4    128030  s:300~l:8007~e:128030~c:128030  2005-02-05T14:00Z   \n",
+       "   match_id                       unique_id  ... score_opposition winner_opposition\n",
+       "0     24843    s:300~l:8323~e:24843~c:24843  ...                9             False\n",
+       "1     24843    s:300~l:8323~e:24843~c:24843  ...               16              True\n",
+       "2     24844    s:300~l:8323~e:24844~c:24844  ...                9             False\n",
+       "3     24844    s:300~l:8323~e:24844~c:24844  ...               11              True\n",
+       "4    128030  s:300~l:8007~e:128030~c:128030  ...                9             False\n",
        "\n",
-       "                  venue         city    state  neutral_site indoor  \\\n",
-       "0       Stade de France  Saint-Denis  Reunion         False  False   \n",
-       "1       Stade de France  Saint-Denis  Reunion         False  False   \n",
-       "2  Principality Stadium      Cardiff    Wales         False  False   \n",
-       "3  Principality Stadium      Cardiff    Wales         False  False   \n",
-       "4      Twickenham Stoop       London  England         False  False   \n",
-       "\n",
-       "             competition  season     id home_away  score winner  \\\n",
-       "0            Six Nations    2005      9      home     16   True   \n",
-       "1            Six Nations    2005      2      away      9  False   \n",
-       "2            Six Nations    2005      4      home     11   True   \n",
-       "3            Six Nations    2005      1      away      9  False   \n",
-       "4  Gallagher Premiership    2005  25901      home     38   True   \n",
-       "\n",
-       "   id_opposition home_away_opposition  score_opposition winner_opposition  \n",
-       "0              2                 away                 9             False  \n",
-       "1              9                 home                16              True  \n",
-       "2              1                 away                 9             False  \n",
-       "3              4                 home                11              True  \n",
-       "4          25900                 away                 9             False  "
+       "[5 rows x 18 columns]"
       ]
      },
      "execution_count": 4,
@@ -632,45 +590,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                              match_id  match_date  venue  city  state  \\\n",
-       "unique_id                                                                \n",
-       "s:300~l:8337~e:93501~c:93501         2           2      2     2      2   \n",
-       "s:300~l:8337~e:93502~c:93502         2           2      2     2      2   \n",
-       "s:300~l:8337~e:93503~c:93503         2           2      2     2      2   \n",
-       "s:300~l:8337~e:93504~c:93504         2           2      2     2      2   \n",
-       "s:300~l:8337~e:93505~c:93505         2           2      2     2      2   \n",
+       "                              match_id  ...  winner_opposition\n",
+       "unique_id                               ...                   \n",
+       "s:300~l:8337~e:93501~c:93501         2  ...                  2\n",
+       "s:300~l:8337~e:93502~c:93502         2  ...                  2\n",
+       "s:300~l:8337~e:93503~c:93503         2  ...                  2\n",
+       "s:300~l:8337~e:93504~c:93504         2  ...                  2\n",
+       "s:300~l:8337~e:93505~c:93505         2  ...                  2\n",
        "\n",
-       "                              neutral_site  indoor  competition  season  id  \\\n",
-       "unique_id                                                                     \n",
-       "s:300~l:8337~e:93501~c:93501             2       2            2       2   2   \n",
-       "s:300~l:8337~e:93502~c:93502             2       2            2       2   2   \n",
-       "s:300~l:8337~e:93503~c:93503             2       2            2       2   2   \n",
-       "s:300~l:8337~e:93504~c:93504             2       2            2       2   2   \n",
-       "s:300~l:8337~e:93505~c:93505             2       2            2       2   2   \n",
-       "\n",
-       "                              home_away  score  winner  id_opposition  \\\n",
-       "unique_id                                                               \n",
-       "s:300~l:8337~e:93501~c:93501          2      2       2              2   \n",
-       "s:300~l:8337~e:93502~c:93502          2      2       2              2   \n",
-       "s:300~l:8337~e:93503~c:93503          2      2       2              2   \n",
-       "s:300~l:8337~e:93504~c:93504          2      2       2              2   \n",
-       "s:300~l:8337~e:93505~c:93505          2      2       2              2   \n",
-       "\n",
-       "                              home_away_opposition  score_opposition  \\\n",
-       "unique_id                                                              \n",
-       "s:300~l:8337~e:93501~c:93501                     2                 2   \n",
-       "s:300~l:8337~e:93502~c:93502                     2                 2   \n",
-       "s:300~l:8337~e:93503~c:93503                     2                 2   \n",
-       "s:300~l:8337~e:93504~c:93504                     2                 2   \n",
-       "s:300~l:8337~e:93505~c:93505                     2                 2   \n",
-       "\n",
-       "                              winner_opposition  \n",
-       "unique_id                                        \n",
-       "s:300~l:8337~e:93501~c:93501                  2  \n",
-       "s:300~l:8337~e:93502~c:93502                  2  \n",
-       "s:300~l:8337~e:93503~c:93503                  2  \n",
-       "s:300~l:8337~e:93504~c:93504                  2  \n",
-       "s:300~l:8337~e:93505~c:93505                  2  "
+       "[5 rows x 17 columns]"
       ]
      },
      "execution_count": 5,
@@ -821,33 +749,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   match_id                       unique_id         match_date  \\\n",
-       "0     24843    s:300~l:8323~e:24843~c:24843  2005-02-05T14:00Z   \n",
-       "1     24843    s:300~l:8323~e:24843~c:24843  2005-02-05T14:00Z   \n",
-       "2     24844    s:300~l:8323~e:24844~c:24844  2005-02-05T17:30Z   \n",
-       "3     24844    s:300~l:8323~e:24844~c:24844  2005-02-05T17:30Z   \n",
-       "4    128030  s:300~l:8007~e:128030~c:128030  2005-02-05T14:00Z   \n",
+       "   match_id                       unique_id  ... id_opposition score_opposition\n",
+       "0     24843    s:300~l:8323~e:24843~c:24843  ...             2                9\n",
+       "1     24843    s:300~l:8323~e:24843~c:24843  ...             9               16\n",
+       "2     24844    s:300~l:8323~e:24844~c:24844  ...             1                9\n",
+       "3     24844    s:300~l:8323~e:24844~c:24844  ...             4               11\n",
+       "4    128030  s:300~l:8007~e:128030~c:128030  ...         25900                9\n",
        "\n",
-       "                  venue         city    state  neutral_site indoor  \\\n",
-       "0       Stade de France  Saint-Denis  Reunion         False  False   \n",
-       "1       Stade de France  Saint-Denis  Reunion         False  False   \n",
-       "2  Principality Stadium      Cardiff    Wales         False  False   \n",
-       "3  Principality Stadium      Cardiff    Wales         False  False   \n",
-       "4      Twickenham Stoop       London  England         False  False   \n",
-       "\n",
-       "             competition  season     id home_away  score  id_opposition  \\\n",
-       "0            Six Nations    2005      9      home     16              2   \n",
-       "1            Six Nations    2005      2      away      9              9   \n",
-       "2            Six Nations    2005      4      home     11              1   \n",
-       "3            Six Nations    2005      1      away      9              4   \n",
-       "4  Gallagher Premiership    2005  25901      home     38          25900   \n",
-       "\n",
-       "   score_opposition  \n",
-       "0                 9  \n",
-       "1                16  \n",
-       "2                 9  \n",
-       "3                11  \n",
-       "4                 9  "
+       "[5 rows x 15 columns]"
       ]
      },
      "execution_count": 6,
@@ -962,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -971,7 +880,7 @@
        "14.661669659603934"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1003,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +921,7 @@
        "10.252334088701845"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1057,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +986,7 @@
        "9.355663118873512"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1116,7 +1025,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0 (default, Jun  8 2022, 14:19:37) [Clang 13.0.0 (clang-1300.0.29.3)]"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
