--- a/notebooks/02_first_model.ipynb
+++ b/notebooks/02_first_model.ipynb
@@ -304,7 +304,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rugby_prediction.preprocessing import drop_competitions\n",
+    "from rugby_prediction.preprocess import drop_competitions\n",
     "\n",
     "raw_match_data = drop_competitions(raw_match_data)"
    ]
@@ -537,7 +537,7 @@
    ],
    "source": [
     "# create row per team, per match\n",
-    "from rugby_prediction.preprocessing import TEAM_COLUMNS, CORE_COLUMNS, transform_raw_data_to_team_level\n",
+    "from rugby_prediction.preprocess import TEAM_COLUMNS, CORE_COLUMNS, transform_raw_data_to_team_level\n",
     "\n",
     "team_columns_with_conceded = TEAM_COLUMNS + ['conceded', 'rolling_score', 'rolling_conceded']\n",
     "team_level_data = transform_raw_data_to_team_level(raw_match_data, team_columns_with_conceded)\n",
@@ -764,7 +764,7 @@
     }
    ],
    "source": [
-    "from rugby_prediction.preprocessing import map_competitions\n",
+    "from rugby_prediction.preprocess import map_competitions\n",
     "\n",
     "team_level_data = map_competitions(team_level_data)\n",
     "team_level_data['home'] = np.where(team_level_data['home_away'] == 'home', True, False)\n",
