--- a/notebooks/03_model_improvements.ipynb
+++ b/notebooks/03_model_improvements.ipynb
@@ -1582,7 +1582,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rugby-prediction-4-SDCU1Z-py3.10",
+   "display_name": "rugby-prediction-4-SDCU1Z-py3.11",
    "language": "python",
    "name": "python3"
   },
@@ -1596,12 +1596,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.1 (main, Dec  9 2022, 09:51:57) [Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "15033227152320965918862fa8fa8c1fa7a2bc018382ffd35ecad36333dfdc8d"
+    "hash": "f5b4f1839998864df7032e0ef378a1493ad813b0f02225a09dcdbfd122f7d4ab"
    }
   }
  },
